# term-chat

./: .gitignore  Cargo.toml  README.md  tree.txt
.cargo/: config.toml
client/: Cargo.toml
client/src/: app.rs  client.rs  main.rs
client/src/app/: event.rs  resources.rs  vim copy.rs  vim.rs
common/: Cargo.toml
common/src/: codec.rs  lib.rs  secure.rs
server/: Cargo.toml  server-settings.ron  upload.sh
server/src/: main.rs  server.rs
