[workspace]
members = ["client", "common", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Noonicknames"]
rust-version = "1.86"
readme = "README.md"

[workspace.dependencies]
common = { path = "./common" }

clap = { version = "4.5.*" }
ratatui = { version = "0.29.*" }
tui-textarea = { version = "0.7.*"  }
crossterm = { version = "0.28.*" }

futures = { version = "0.3.*", default-features = false }
tokio = { version = "1.47.*", default-features = false }
tokio-util = { version = "0.7.*" }
papaya = { version = "0.2.*", default-features = false}
serde = { version = "1.0.*" }

log = { version = "0.4.*" }
thiserror = { version = "2.*" }
env_logger = { version = "0.11.*" }
flexi_logger = { version = "0.31.*" }
serde_cbor = { version = "0.11.*" }


[profile.release]
lto = "fat"
opt-level = 'z'