[workspace]
members = ["client", "common", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Noonicknames"]
rust-version = "1.86"
readme = "README.md"

[workspace.dependencies]
common = { path = "./common" }

clap = { version = "4.5.*" }
ratatui = { version = "0.29.*" }
tui-textarea = { version = "0.7.*"  }
crossterm = { version = "0.28.*" }
unicode-width = { version = "0.2.*" }

futures = { version = "0.3.*", default-features = false }
tokio = { version = "1.47.*", default-features = false }
tokio-util = { version = "0.7.*" }
bytes = { version = "1.10.*", features = ["serde"]}
papaya = { version = "0.2.*", default-features = false}
serde = { version = "1.0.*" }
ron = { version = "0.11.*"}

rand = "0.9.2"
aes-gcm = "0.10.*"
flate2 = { version = "1.1.*", default-features = false, features = ["zlib-rs"]}
hkdf = "0.12.*"
lz4 = "1.28.*"
p521 = { version = "0.13.*", features = ["ecdh", "rand_core"] }
sha2 = "0.10.9"
chacha20poly1305 = { version = "0.10.*" }

log = { version = "0.4.*" }
thiserror = { version = "2.*" }
env_logger = { version = "0.11.*" }
flexi_logger = { version = "0.31.*" }
serde_cbor = { version = "0.11.*" }


[profile.release]
lto = "fat"
opt-level = 'z'