[package]
name = "term-chat"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
common.workspace = true

clap = { workspace = true, features = ["derive"] }
tui-textarea.workspace = true
ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }

futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "io-std", "time"] }
tokio-util = { workspace = true, features = ["codec"]}
serde_cbor.workspace = true

flexi_logger.workspace = true
log = { workspace = true }
thiserror.workspace = true